--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "test": "npm run build && npm run lint",
     "prepublishOnly": "npm run build"
   },
+  "dependencies": {
+    "prettier": "^1.19.1"
+  },
   "devDependencies": {
     "@syntek/eslint-config-syntek": "^2.0.2",
+    "@types/prettier": "^1.19.0",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "eslint": "^6.8.0",
