--- a/package.json
+++ b/package.json
@@ -1,33 +1,20 @@
 {
   "name": "@sourcebin/web-beautify",
   "version": "0.0.1",
-  "main": "dist/main.js",
+  "main": "src/index.js",
   "scripts": {
-    "dev": "webpack --watch",
-    "build": "webpack -p",
     "lint": "eslint --ignore-path .gitignore .",
-    "test": "npm run build && npm run lint",
-    "prepublishOnly": "npm run build"
+    "test": "npm run lint"
   },
   "dependencies": {
     "prettier": "^1.19.1"
   },
   "devDependencies": {
     "@syntek/eslint-config-syntek": "^2.0.2",
-    "@types/prettier": "^1.19.0",
-    "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "^1.13.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-eslint-comments": "^3.1.2",
     "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-jsdoc": "^15.8.0",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.8.3",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11"
-  },
-  "files": [
-    "dist"
-  ]
+    "eslint-plugin-jsdoc": "^15.8.0"
+  }
 }
