--- a/examples/package.json
+++ b/examples/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "dev": "webpack --watch"
+    "dev": "webpack --watch",
+    "build": "webpack"
   },
   "devDependencies": {
     "html-webpack-plugin": "^3.2.0",
