--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "npm run lint"
   },
   "dependencies": {
+    "@prettier/plugin-php": "^0.13.0",
     "prettier": "^1.19.1"
   },
   "devDependencies": {
