--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "eslint-plugin-eslint-comments": "^3.1.2",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsdoc": "^15.8.0"
-  }
+  },
+  "files": [
+    "src"
+  ]
 }
